--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ html,body {
 .navbar{
     position: fixed;
     width: 100%;
+    z-index: 999;
     padding: 30px 0;
     font-family: 'Ubuntu', sans-serif;
     transition: all 0.3s ease;
@@ -128,10 +129,113 @@ html,body {
     background: none;
 }
 
+/*SOBRE*/
+section{
+    padding: 100px 0;
+}
+
+.about{
+    font-family: 'Poppins', sans-serif;
+}
+
+.about .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.about .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #1a1a1a;
+    transform: translateX(-50%);
+}
+
+.about .title::after{
+    content: "Quem sou eu";
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    font-size: 20px;
+    color: #ff0000;
+    padding: 5px;
+    background: #fff;
+    transform: translateX(-50%);
+}
+.about .about-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.about .about-content .left{
+    width: 45%;
+}
+
+.about .about-content .left img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.about .about-content .right{
+    width: 55%;
+}
+
+.about .about-content .right .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+
+}
+
+.about .about-content .right .text span{
+    color: #ff0000;
+}
+
+.about .about-content .right p{
+    text-align: justify;
+}
+
+.about .about-content .right a{
+    display: inline-block;
+    background: #1a1a1a;
+    color: #fff;
+    font-size: 20px;
+    padding: 10px 30px;
+    margin-top: 25px;
+    border-radius: 6px;
+    border: 2px solid #1a1a1a;
+    transition: all 0.3s ease;
+}
+
+.about .about-content .right a:hover{
+    color: #1a1a1a;
+    background: none;
+    font-weight: 500;
+}
+
 /*RESPONSIVIDADE*/
-@media (max-width: 1005px){ 
+@media (max-width: 1300px){ 
     .home .max-width{
         margin-left: 0px;
+    }
+}
+
+@media (max-width: 1005px){ 
+    .about .about-content .left img{
+        width: 350px;
+        height: 350px;
     }
 }
 
@@ -139,7 +243,6 @@ html,body {
     .max-width{
         padding: 0 50px;
     }
-
 }
 
 @media (max-width: 990px){
@@ -191,6 +294,24 @@ html,body {
         padding: 10px 30px;
     }
 
+    .max-width{
+        max-width: 800px;
+
+    }
+    
+    .about .about-content .column{
+        width: 100%;
+    }
+
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+
+    .about .about-content .right{
+        flex: 100%;
+    }
 }
 
 @media (max-width: 650px){
@@ -209,7 +330,6 @@ html,body {
     .home .home-content a{
         font-size: 20px;
     }
-
 }
 
 @media (max-width: 550px){
@@ -220,5 +340,4 @@ html,body {
     .home .home-content .text-3{
         font-size: 30px;
     }
-
 }
