--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
 * {
     padding: 0;
@@ -109,7 +110,9 @@ html,body {
 
 .home .home-content .text-3 span{
     color: #1a1a1a;
-    font-weight: 500;
+    font-size: 70px;
+    font-weight: bold;
+    font-family: 'Share Tech Mono', sans-serif;
 }
 
 .home .home-content a{
@@ -225,6 +228,112 @@ section{
     font-weight: 500;
 }
 
+/*SERVIÇOS*/
+.services{
+    font-family: 'Poppins', sans-serif;
+    color: #fff;
+    background: #111;
+}
+
+.services .title{
+    color: #fff;
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.services .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #fff;
+    transform: translateX(-50%);
+}
+
+.services .title::after{
+    content: "Meus serviços";
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    font-size: 20px;
+    color: #ff0000;
+    padding: 5px;
+    background: #111;
+    transform: translateX(-50%);
+}
+.services .services-content{
+    color: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.services .services-content .card{
+    position: relative;
+    height: 400px;
+    width: calc(33% - 20px);
+    background: #1a1a1a;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.services .services-content .card:hover{
+    background: #222;
+}
+
+.services .services-content .card:hover .box{
+        transform: scale(1.02);
+}
+
+.services .services-content .card i{
+    font-size: 80px;
+    color: #ff0000;
+    padding: 30px;
+}
+
+.services .services-content .card .box{
+    transition: all 0.3s ease;
+}
+
+.services .services-content .card .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin: 10px 0 7px 0;
+}
+
+.services .services-content .card p{
+    text-align: center;
+}
+
+.services .services-content .card a{
+    display: inline-block;
+    background: #fff;
+    color: #1a1a1a;
+    font-size: 20px;
+    padding: 10px 30px;
+    margin-top: 25px;
+    border-radius: 6px;
+    border: 2px solid #1a1a1a;
+    transition: all 0.3s ease;
+}
+
+.services .services-content .card a:hover{
+    background: none;
+    color: #fff;
+    border: 2px solid #fff;
+}
+
 /*RESPONSIVIDADE*/
 @media (max-width: 1300px){ 
     .home .max-width{
@@ -289,6 +398,10 @@ section{
         font-size: 50px;
     }
 
+    .home .home-content .text-3{
+        font-size: 50px;
+    }
+
     .home .home-content a{
         font-size: 23px;
         padding: 10px 30px;
@@ -312,6 +425,11 @@ section{
     .about .about-content .right{
         flex: 100%;
     }
+
+    .services .services-content .card{
+        width: calc(50% - 10px);
+        margin-bottom: 25px;
+    }
 }
 
 @media (max-width: 650px){
@@ -327,9 +445,17 @@ section{
         font-size: 40px;
     }
 
+    .home .home-content .text-3 span{
+        font-size: 40px;
+    }
+
     .home .home-content a{
         font-size: 20px;
     }
+
+    .services .services-content .card{
+        width: 100%;
+    }    
 }
 
 @media (max-width: 550px){
@@ -338,6 +464,10 @@ section{
     }
 
     .home .home-content .text-3{
+        font-size: 30px;
+    }
+
+    .home .home-content .text-3 span{
         font-size: 30px;
     }
 }
