--- a/css/styles.css
+++ b/css/styles.css
@@ -585,6 +585,10 @@ section{
     color: #fff;
 }
 
+.apps .carousel .card .text a:hover{
+    color: #ff0000;
+}
+
 .apps .carousel .card img{
     height: 150px;
     width: 250px;
@@ -979,8 +983,28 @@ section{
     }
 }
 
+@media (max-width: 450px){
+    .home .home-content .text-3 span{
+        font-size: 25px;
+    }
+}
+
 @media (max-width: 400px){
     .apps .title::after{
         font-size: 15px;
+    }
+}
+
+@media (max-width: 385px){
+    .home .home-content .text-2{
+        font-size: 40px;
+    }
+
+    .home .home-content .text-3{
+        font-size: 25px;
+    }
+
+    .home .home-content .text-3 span{
+        font-size: 23px;
     }
 }
